Fixed layout issue.

--- a/public/javascripts/ckeditor/contents.css
+++ b/public/javascripts/ckeditor/contents.css
@@ -15,11 +15,3 @@ body
 	/* Remove the background color to make it transparent */
 	background-color: #fff;
 }
-
-ol,ul,dl
-{
-	/* IE7: reset rtl list margin. (#7334) */
-	*margin-right:0px;
-	/* preserved spaces for list items with text direction other than the list. (#6249,#8049)*/
-    padding:0 40px;
-}
